# minibuf

./: .gitignore  CREDITS  LICENSE  README.md  pyproject.toml
examples/: example.py  fake_inputs.json  ipc.py
examples/generated_proto/: Address.proto  Order.proto  UserProfile.proto
examples/outputs/: address_test.json  order_full.json  order_minimal.json  user_profile.json  user_profile_minimal.json
src/minibuf/: __init__.py  _types.py  common.py  logger.py  message.py  registry.py  varint.py
src/minibuf/types/: __init__.py  _types.py
tests/: test_cases.py
tests/inputs/: AllFieldNumbers.json  ComplexMessage.json  EdgeCases.json  MapFields.json  OuterMessage.json  RepeatedFields.json  ScalarTypes.json  WithDefaults.json
