[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minibuf"
version = "0.1.3"
description = "Toy protocol buffers implementation on python (and for python) without dependencies"
authors = [{name = "IcarusMachineGun"}]
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = [
    "INP001",
    "F405", 
    "F403",
    "E402",
]